--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
             <div class="hero-images">
     <img src="assets/img/9.jpg" alt="Tractor in a vast agricultural field" class="hero-bg-img">
     <img src="assets/img/9.jpeg" alt="A farmer holding rich soil in their hands" class="hero-bg-img">
-    <img src="assets/img/7.png" alt="Lush green plants growing inside a modern greenhouse" class="hero-bg-img">
+    <img src="assets/img/head.png" alt="Lush green plants growing inside a modern greenhouse" class="hero-bg-img">
 </div>
             <div class="hero-content container mx-auto px-6">
                 <h1 class="text-5xl md:text-7xl font-extrabold leading-tight mb-4" data-translate="hero_title">Un Avenir Vert Pour l'Agriculture</h1>
