--- a/Activities.html
+++ b/Activities.html
@@ -241,7 +241,7 @@
     <header id="navbar" class="navbar">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html"><div class="flex items-center">
-                <img style="border-radius: 8px; " src="Agenda (2).png" alt="Association Logo" class="h-12">
+                <img loading="lazy" style="border-radius: 8px; " src="Agenda (2).png" alt="Association Logo" class="h-12">
             </div></a>
             <div class="hidden md:flex items-center gap-10">
                 <a href="about.html" class="nav-link" data-translate="nav_about">Qui Sommes-Nous</a>
@@ -255,20 +255,20 @@
                 <!-- Language switcher -->
                 <div class="language-selector">
                     <button class="language-selector-button" aria-label="Select Language">
-                         <img id="selected-lang-icon" src="https://flagcdn.com/w40/fr.png" alt="French Flag">
+                         <img loading="lazy" id="selected-lang-icon" src="https://flagcdn.com/w40/fr.png" alt="French Flag">
                          <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                     </button>
                     <div class="language-dropdown">
                         <div class="language-option" onclick="changeLanguage('fr')">
-                            <img src="https://flagcdn.com/w40/fr.png" alt="French Flag">
+                            <img loading="lazy" src="https://flagcdn.com/w40/fr.png" alt="French Flag">
                             <span>Français</span>
                         </div>
                         <div class="language-option" onclick="changeLanguage('en')">
-                            <img src="https://flagcdn.com/w40/us.png" alt="USA Flag">
+                            <img loading="lazy"src="https://flagcdn.com/w40/us.png" alt="USA Flag">
                             <span>English</span>
                         </div>
                         <div class="language-option" onclick="changeLanguage('ar')">
-                            <img src="https://flagcdn.com/w40/ma.png" alt="Moroccan Flag">
+                            <img loading="lazy"src="https://flagcdn.com/w40/ma.png" alt="Moroccan Flag">
                             <span>العربية</span>
                         </div>
                     </div>
@@ -303,7 +303,7 @@
                  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                      <!-- Activity 1 -->
                      <div class="activity-card animate-on-scroll zoom-in">
-                         <img src="assets/img/IMG-20250630-WA0000.jpg" alt="Technical Support for Farmers" class="activity-card-image">
+                         <img loading="lazy"src="assets/img/IMG-20250630-WA0000.jpg" alt="Technical Support for Farmers" class="activity-card-image">
                          <div class="activity-card-content">
                              <h3 class="text-xl font-bold mb-2" data-translate="activity_1_title">Organisation et Appui Technique</h3>
                              <p class="text-gray-600" data-translate="activity_1_text">Mise en place d'un système d'organisation collective autour d'entreprises de services pour garantir un accompagnement technique fiable et accessible à tous.</p>
@@ -311,14 +311,14 @@
                      </div>
                      <!-- Activity 2 -->
                      <div class="activity-card animate-on-scroll zoom-in" style="transition-delay: 150ms;">
-                         <img src="assets/img/IMG-20250630-WA0004.jpg" alt="Farmer Training Session" class="activity-card-image">
+                         <img loading="lazy"src="assets/img/IMG-20250630-WA0004.jpg" alt="Farmer Training Session" class="activity-card-image">
                          <div class="activity-card-content">
                              <h3 class="text-xl font-bold mb-2" data-translate="activity_2_title">Formation et Encadrement</h3>
                              <p class="text-gray-600" data-translate="activity_2_text">Un programme structuré pour renforcer les compétences des agriculteurs et leur permettre d’intégrer de nouvelles innovations technologiques.</p>
                          </div>
                      </div>
                      <!-- Activity 3 -->
-                     <div class="activity-card animate-on-scroll zoom-in" style="transition-delay: 300ms;">
+                     <div loading="lazy"class="activity-card animate-on-scroll zoom-in" style="transition-delay: 300ms;">
                           <img src="assets/img/IMG-20250515-WA0003.jpg" alt="Community Awareness Meeting" class="activity-card-image">
                          <div class="activity-card-content">
                              <h3 class="text-xl font-bold mb-2" data-translate="activity_3_title">Sensibilisation et Partage</h3>
@@ -326,7 +326,7 @@
                          </div>
                      </div>
                       <!-- Activity 4 -->
-                     <div class="activity-card animate-on-scroll zoom-in" style="transition-delay: 450ms;">
+                     <div loading="lazy"class="activity-card animate-on-scroll zoom-in" style="transition-delay: 450ms;">
                          <img src="assets/img/IMG-20250630-WA0012.jpg" alt="Communication and Reports" class="activity-card-image">
                          <div class="activity-card-content">
                              <h3 class="text-xl font-bold mb-2" data-translate="activity_4_title">Communication et Diffusion</h3>
@@ -334,7 +334,7 @@
                          </div>
                      </div>
                       <!-- Activity 5 -->
-                     <div class="activity-card animate-on-scroll zoom-in" style="transition-delay: 600ms;">
+                     <div loading="lazy"class="activity-card animate-on-scroll zoom-in" style="transition-delay: 600ms;">
                           <img src="assets/img/IMG-20250702-WA0001.jpg" alt="Environmental Commitment" class="activity-card-image">
                          <div class="activity-card-content">
                              <h3 class="text-xl font-bold mb-2" data-translate="activity_5_title">Engagement Environnemental et Social</h3>
@@ -342,7 +342,7 @@
                          </div>
                      </div>
                      <!-- NEW Activity 6 -->
-                     <div class="activity-card animate-on-scroll zoom-in" style="transition-delay: 750ms;">
+                     <div loading="lazy"class="activity-card animate-on-scroll zoom-in" style="transition-delay: 750ms;">
                           <img src="assets/img/489829121_9533365926716337_8064868432537935884_n.jpg" alt="Market Access" class="activity-card-image">
                          <div class="activity-card-content">
                              <h3 class="text-xl font-bold mb-2" data-translate="activity_6_title">Accès au Marché & Valorisation</h3>
