--- a/about.html
+++ b/about.html
@@ -240,7 +240,7 @@
     <header id="navbar" class="navbar">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html"><div class="flex items-center">
-                <img style="border-radius: 8px; " src="Agenda (2).png" alt="Association Logo" class="h-12">
+                <img style="border-radius: 8px; " src="Agenda (2).png" alt="Association Logo" loading="lazy" class="h-12">
             </div></a>
             <div class="hidden md:flex items-center gap-10">
                 <a href="about.html" class="nav-link active" data-translate="nav_about">Qui Sommes-Nous</a>
@@ -254,20 +254,20 @@
                 <!-- Language switcher -->
                 <div class="language-selector">
                     <button class="language-selector-button" aria-label="Select Language">
-                         <img id="selected-lang-icon" src="https://flagcdn.com/w40/fr.png" alt="French Flag">
+                         <img loading="lazy" id="selected-lang-icon" src="https://flagcdn.com/w40/fr.png" alt="French Flag">
                          <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                     </button>
                     <div class="language-dropdown">
                         <div class="language-option" onclick="changeLanguage('fr')">
-                            <img src="https://flagcdn.com/w40/fr.png" alt="French Flag">
+                            <img loading="lazy" src="https://flagcdn.com/w40/fr.png" alt="French Flag">
                             <span>Français</span>
                         </div>
                         <div class="language-option" onclick="changeLanguage('en')">
-                            <img src="https://flagcdn.com/w40/us.png" alt="USA Flag">
+                            <img loading="lazy" src="https://flagcdn.com/w40/us.png" alt="USA Flag">
                             <span>English</span>
                         </div>
                         <div class="language-option" onclick="changeLanguage('ar')">
-                            <img src="https://flagcdn.com/w40/ma.png" alt="Moroccan Flag">
+                            <img loading="lazy" src="https://flagcdn.com/w40/ma.png" alt="Moroccan Flag">
                             <span>العربية</span>
                         </div>
                     </div>
@@ -304,7 +304,7 @@
                 </div>
                 <div class="grid md:grid-cols-2 gap-16 items-center">
                     <div class="animate-on-scroll slide-in-left">
-                        <img src="assets/img/2.jpg" alt="Farmers collaborating in a field">
+                        <img loading="lazy" src="assets/img/2.jpg" alt="Farmers collaborating in a field">
                     </div>
                     <div class="animate-on-scroll slide-in-right">
                         <p class="text-gray-600 mb-8" data-translate="mission_text">
@@ -380,7 +380,7 @@
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8 text-center md:text-start">
 
             <div class="md:col-span-2">
-                <img style="border-radius: 8px;" src="Agenda (2).png" alt="Association Logo" class="h-12 mb-4 mx-auto md:mx-0">
+                <img loading="lazy" style="border-radius: 8px;" src="Agenda (2).png" alt="Association Logo" class="h-12 mb-4 mx-auto md:mx-0">
                 <p class="text-gray-400" data-translate="footer_about">Cultiver un avenir durable pour l'agriculture marocaine grâce à l'innovation et à la communauté.</p>
             </div>
 
