--- a/contact.html
+++ b/contact.html
@@ -284,7 +284,7 @@
         </nav>
         <div id="mobile-menu" class="hidden md:hidden bg-white shadow-lg">
             <a href="about.html" class="block py-3 px-6 text-gray-700 hover:bg-gray-50" data-translate="nav_about">Qui Sommes-Nous</a>
-            <a href="activities.html" class="block py-3 px-6 text-gray-700 hover:bg-gray-50" data-translate="nav_activities">Nos Activités</a>
+            <a href="Activities.html" class="block py-3 px-6 text-gray-700 hover:bg-gray-50" data-translate="nav_activities">Nos Activités</a>
             <a href="projects.html" class="block py-3 px-6 text-gray-700 hover:bg-gray-50" data-translate="nav_projects">Nos Projets</a>
             <a href="partners.html" class="block py-3 px-6 text-gray-700 hover:bg-gray-50" data-translate="nav_partners">Nos Partenaires</a>
             <a href="contact.html" class="block py-3 px-6 text-gray-700 hover:bg-gray-50" data-translate="nav_contact">Contact</a>
