--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
             z-index: 60;
             min-width: 160px;
         }
-        .language-selector:hover .language-dropdown {
-            opacity: 1;
-            visibility: visible;
-            transform: translateY(0);
-        }
+        /* --- ADD THIS NEW RULE --- */
+.language-dropdown.is-open {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+}
         .language-option {
             display: flex;
             align-items: center;
@@ -173,7 +174,7 @@
 
         .hero-section {
             height: 100vh;
-            width: 100vw;
+            width: 100%;
             position: relative;
             display: flex;
             align-items: center;
@@ -599,7 +600,7 @@
     <header id="navbar" class="navbar">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html"><div class="flex items-center">
-                <img style="border-radius: 8px; " src="Agenda (2).png" alt="Association Logo" class="h-12">
+                <img style="border-radius: 8px; height: 60px;height: 60px; " src="Agenda (2).jpg" alt="Association Logo" class="h-12">
             </div></a>
             <div class="hidden md:flex items-center gap-10">
                 <a href="about.html" class="nav-link" data-translate="nav_about">Qui Sommes-Nous</a>
@@ -912,7 +913,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8 text-center md:text-left rtl:md:text-right">
                 <!-- Column 1: Logo & About -->
                 <div class="md:col-span-2">
-                    <img style="border-radius: 8px; " src="Agenda (2).png" alt="Association Logo" class="h-12 mb-4 mx-auto md:mx-0">
+                    <img style="border-radius: 8px; height: 60px;" src="Agenda (2).jpg" alt="Association Logo" class="h-12 mb-4 mx-auto md:mx-0">
                     <p class="text-gray-400" data-translate="footer_about">Cultiver un avenir durable pour l'agriculture marocaine grâce à l'innovation et à la communauté.</p>
                 </div>
                 <!-- Column 2: Quick Links -->
@@ -947,14 +948,14 @@
     <script>
         const translations = {
             fr: {
-                title: "Association pour une Agriculture Durable et Intelligente",
+                title: "Un avenir vert pour une agriculture durable",
                 nav_about: "Qui Sommes-Nous",
                 nav_activities: "Nos Activités",
                 nav_projects: "Nos Projets",
                 nav_partners: "Nos Partenaires",
                 nav_contact: "Contact",
                 contact_us_btn: "Contactez-Nous",
-                hero_title: "Un Avenir Vert Pour l'Agriculture",
+                hero_title: "Un avenir vert pour une agriculture durable",
                 hero_subtitle: "Nous innovons pour une agriculture plus durable, plus intelligente et plus résiliente à travers le Maroc.",
                 learn_more_btn: "En Savoir Plus",
                 about_title: "Cultiver l'Avenir, Ensemble",
@@ -1032,7 +1033,7 @@
                 nav_testimonials: "Testimonials",
                 nav_contact: "Contact",
                 contact_us_btn: "Contact Us",
-                hero_title: "A Green Future For Agriculture",
+                hero_title: "A greener future for sustainable farming",
                 hero_subtitle: "We innovate for a more sustainable, smarter, and more resilient agriculture across Morocco.",
                 learn_more_btn: "Learn More",
                 about_title: "Cultivating the Future, Together",
@@ -1109,7 +1110,7 @@
                 nav_partners: "شركاؤنا",
                 nav_contact: "اتصل بنا",
                 contact_us_btn: "اتصل بنا",
-                hero_title: "مستقبل أخضر للزراعة",
+                hero_title: "مستقبل أخضر من أجل فلاحة مستدامة",
                 hero_subtitle: "نبتكر من أجل زراعة أكثر استدامة وذكاء ومرونة في جميع أنحاء المغرب.",
                 learn_more_btn: "اعرف المزيد",
                 about_title: "نزرع المستقبل معًا",
@@ -1190,6 +1191,7 @@
             if (!translations[lang] || !flagImageSrc[lang]) return;
             document.documentElement.lang = lang;
             document.documentElement.dir = lang === 'ar' ? 'rtl' : 'ltr';
+             document.querySelector('.language-dropdown').classList.remove('is-open');
             document.title = translations[lang].title;
             document.querySelectorAll('[data-translate]').forEach(element => {
                 const key = element.getAttribute('data-translate');
@@ -1212,6 +1214,21 @@
                     preloader.style.display = 'none';
                 }, 500);
             });
+             const langButton = document.querySelector('.language-selector-button');
+    const langDropdown = document.querySelector('.language-dropdown');
+
+    // Handles opening and closing the dropdown when the button is clicked
+    langButton.addEventListener('click', (e) => {
+        e.stopPropagation(); // Prevents the click from closing the menu immediately
+        langDropdown.classList.toggle('is-open');
+    });
+
+    // Handles closing the dropdown if you click anywhere else on the page
+    document.addEventListener('click', () => {
+        if (langDropdown.classList.contains('is-open')) {
+            langDropdown.classList.remove('is-open');
+        }
+    });
 
             const mobileMenuButton = document.getElementById('mobile-menu-button');
             const mobileMenu = document.getElementById('mobile-menu');
