--- a/projects.html
+++ b/projects.html
@@ -85,11 +85,12 @@
             z-index: 60;
             min-width: 160px;
         }
-        .language-selector:hover .language-dropdown {
-            opacity: 1;
-            visibility: visible;
-            transform: translateY(0);
-        }
+        /* --- ADD THIS NEW RULE --- */
+.language-dropdown.is-open {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+}
         .language-option {
             display: flex;
             align-items: center;
@@ -233,7 +234,7 @@
     <header id="navbar" class="navbar">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html"><div class="flex items-center">
-                <img style="border-radius: 8px; " src="Agenda (2).png" alt="Association Logo" class="h-12">
+                <img style="border-radius: 8px;height: 60px; " src="Agenda (2).jpg" alt="Association Logo" class="h-12">
             </div></a>
             <div class="hidden md:flex items-center gap-10">
                 <a href="about.html" class="nav-link" data-translate="nav_about">Qui Sommes-Nous</a>
@@ -338,6 +339,7 @@
                          <h3 class="text-xl font-bold mb-2" data-translate="project_9_title">Écoles aux Champs (FFS)</h3>
                          <p class="text-gray-600" data-translate="project_9_text">Mise en place de plateformes d'innovation sur le terrain.</p>
                      </div>
+                      
                  </div>
             </div>
         </section>
@@ -349,7 +351,7 @@
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8 text-center md:text-start">
 
             <div class="md:col-span-2">
-                <img style="border-radius: 8px;" src="Agenda (2).png" alt="Association Logo" class="h-12 mb-4 mx-auto md:mx-0">
+                <img style="border-radius: 8px;height: 60px;" src="Agenda (2).jpg" alt="Association Logo" class="h-12 mb-4 mx-auto md:mx-0">
                 <p class="text-gray-400" data-translate="footer_about">Cultiver un avenir durable pour l'agriculture marocaine grâce à l'innovation et à la communauté.</p>
             </div>
 
@@ -493,6 +495,7 @@
             if (!translations[lang] || !flagImageSrc[lang]) return;
             document.documentElement.lang = lang;
             document.documentElement.dir = lang === 'ar' ? 'rtl' : 'ltr';
+             document.querySelector('.language-dropdown').classList.remove('is-open');
             document.title = translations[lang].title;
             document.querySelectorAll('[data-translate]').forEach(element => {
                 const key = element.getAttribute('data-translate');
@@ -507,7 +510,21 @@
         document.addEventListener('DOMContentLoaded', (event) => {
             const savedLang = localStorage.getItem('language') || 'fr';
             changeLanguage(savedLang);
+ const langButton = document.querySelector('.language-selector-button');
+    const langDropdown = document.querySelector('.language-dropdown');
 
+    // Handles opening and closing the dropdown when the button is clicked
+    langButton.addEventListener('click', (e) => {
+        e.stopPropagation(); // Prevents the click from closing the menu immediately
+        langDropdown.classList.toggle('is-open');
+    });
+
+    // Handles closing the dropdown if you click anywhere else on the page
+    document.addEventListener('click', () => {
+        if (langDropdown.classList.contains('is-open')) {
+            langDropdown.classList.remove('is-open');
+        }
+    });
 
             const mobileMenuButton = document.getElementById('mobile-menu-button');
     const mobileMenu = document.getElementById('mobile-menu');
