--- a/Activities.html
+++ b/Activities.html
@@ -304,7 +304,7 @@
                  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                      <!-- Activity 1 -->
                      <div class="activity-card animate-on-scroll zoom-in">
-                         <img loading="lazy"src="assets/img/IMG-20250630-WA0000.jpg" alt="Technical Support for Farmers" class="activity-card-image">
+                         <img loading="lazy"src="assets/img/IMG-20250630-WA0000.webp" alt="Technical Support for Farmers" class="activity-card-image">
                          <div class="activity-card-content">
                              <h3 class="text-xl font-bold mb-2" data-translate="activity_1_title">Organisation et Appui Technique</h3>
                              <p class="text-gray-600" data-translate="activity_1_text">Mise en place d'un système d'organisation collective autour d'entreprises de services pour garantir un accompagnement technique fiable et accessible à tous.</p>
@@ -312,7 +312,7 @@
                      </div>
                      <!-- Activity 2 -->
                      <div class="activity-card animate-on-scroll zoom-in" style="transition-delay: 150ms;">
-                         <img loading="lazy"src="assets/img/IMG-20250630-WA0004.jpg" alt="Farmer Training Session" class="activity-card-image">
+                         <img loading="lazy"src="assets/img/IMG-20250630-WA0004.webp" alt="Farmer Training Session" class="activity-card-image">
                          <div class="activity-card-content">
                              <h3 class="text-xl font-bold mb-2" data-translate="activity_2_title">Formation et Encadrement</h3>
                              <p class="text-gray-600" data-translate="activity_2_text">Un programme structuré pour renforcer les compétences des agriculteurs et leur permettre d’intégrer de nouvelles innovations technologiques.</p>
@@ -320,7 +320,7 @@
                      </div>
                      <!-- Activity 3 -->
                      <div loading="lazy"class="activity-card animate-on-scroll zoom-in" style="transition-delay: 300ms;">
-                          <img src="assets/img/IMG-20250515-WA0003.jpg" alt="Community Awareness Meeting" class="activity-card-image">
+                          <img src="assets/img/IMG-20250515-WA0003.webp" alt="Community Awareness Meeting" class="activity-card-image">
                          <div class="activity-card-content">
                              <h3 class="text-xl font-bold mb-2" data-translate="activity_3_title">Sensibilisation et Partage</h3>
                              <p class="text-gray-600" data-translate="activity_3_text">Organisation de journées d’information, de démonstration et de restitution pour valoriser les résultats et diffuser les bonnes pratiques.</p>
@@ -328,7 +328,7 @@
                      </div>
                       <!-- Activity 4 -->
                      <div loading="lazy"class="activity-card animate-on-scroll zoom-in" style="transition-delay: 450ms;">
-                         <img src="assets/img/IMG-20250630-WA0012.jpg" alt="Communication and Reports" class="activity-card-image">
+                         <img src="assets/img/IMG-20250630-WA0012.webp" alt="Communication and Reports" class="activity-card-image">
                          <div class="activity-card-content">
                              <h3 class="text-xl font-bold mb-2" data-translate="activity_4_title">Communication et Diffusion</h3>
                              <p class="text-gray-600" data-translate="activity_4_text">Édition et diffusion de bulletins, rapports et supports sur l'évolution des campagnes, les résultats techniques et les réussites obtenues.</p>
@@ -336,7 +336,7 @@
                      </div>
                       <!-- Activity 5 -->
                      <div loading="lazy"class="activity-card animate-on-scroll zoom-in" style="transition-delay: 600ms;">
-                          <img src="assets/img/IMG-20250702-WA0001.jpg" alt="Environmental Commitment" class="activity-card-image">
+                          <img src="assets/img/IMG-20250702-WA0001.webp" alt="Environmental Commitment" class="activity-card-image">
                          <div class="activity-card-content">
                              <h3 class="text-xl font-bold mb-2" data-translate="activity_5_title">Engagement Environnemental et Social</h3>
                              <p class="text-gray-600" data-translate="activity_5_text">Participation et organisation de manifestations et campagnes de sensibilisation pour la protection de l'environnement et des ressources naturelles.</p>
@@ -344,7 +344,7 @@
                      </div>
                      <!-- NEW Activity 6 -->
                      <div loading="lazy"class="activity-card animate-on-scroll zoom-in" style="transition-delay: 750ms;">
-                          <img src="assets/img/489829121_9533365926716337_8064868432537935884_n.jpg" alt="Market Access" class="activity-card-image">
+                          <img src="assets/img/IMG-20250630-WA0019.webp" alt="Market Access" class="activity-card-image">
                          <div class="activity-card-content">
                              <h3 class="text-xl font-bold mb-2" data-translate="activity_6_title">Accès au Marché & Valorisation</h3>
                              <p class="text-gray-600" data-translate="activity_6_text">Créer des liens entre les agriculteurs et les marchés pour assurer une meilleure commercialisation et valorisation de leurs produits durables.</p>
@@ -386,7 +386,7 @@
                     <a href="#" class="text-gray-400 hover:text-white transition-colors" aria-label="Facebook"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M22.675 0h-21.35C.59 0 0 .59 0 1.325v21.35C0 23.41.59 24 1.325 24H12.82v-9.29H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.735 0 1.325-.59 1.325-1.325V1.325C24 .59 23.405 0 22.675 0z"/></svg></a>
                     <a href="#" class="text-gray-400 hover:text-white transition-colors" aria-label="Instagram"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.012 3.584-.07 4.85c-.148 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07s-3.584-.012-4.85-.07c-3.252-.148-4.771-1.691-4.919-4.919-.058-1.265-.069-1.645-.069-4.85s.012-3.584.07-4.85c.148-3.225 1.664-4.771 4.919-4.919C8.416 2.175 8.796 2.163 12 2.163zm0-1.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948s.014 3.667.072 4.947c.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072s3.667-.014 4.947-.072c4.358-.2 6.78-2.618 6.98-6.98.059-1.281.073-1.689.073-4.948s-.014-3.667-.072-4.947c-.2-4.358-2.618-6.78-6.98-6.98C15.668 1.014 15.259 1 12 1zm0 5.838a5 5 0 100 10 5 5 0 000-10zm0 8.838a3.838 3.838 0 110-7.676 3.838 3.838 0 010 7.676zm4.938-9.712a1.162 1.162 0 100-2.324 1.162 1.162 0 000 2.324z"/></svg></a>
                     <a href="#" class="text-gray-400 hover:text-white transition-colors" aria-label="WhatsApp"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M12.04 2c-5.46 0-9.91 4.45-9.91 9.91 0 1.75.46 3.38 1.25 4.82l-1.34 4.89 5.02-1.32c1.39.71 2.97 1.12 4.6 1.12h.01c5.46 0 9.91-4.45 9.91-9.91s-4.45-9.91-9.91-9.91zM17.47 14.38c-.2-.1-.72-.36-1.08-.5-2.83-.94-2.83-2.83 0-3.77.36-.14.88-.4 1.08-.5.2-.1.3-.24.3-.44s-.1-.3-.2-.4l-1.58-1.58c-.1-.1-.24-.2-.4-.2s-.3.05-.4.15l-.78.78c-.2.2-.4.4-.6.5s-.4.2-.6.1c-1.3-.45-2.34-1.49-3.22-2.37-.88-.88-1.92-1.92-2.37-3.22-.1-.2-.05-.4.1-.6s.3-.4.5-.6l.78-.78c.1-.1.15-.3.15-.4s-.1-.3-.2-.4L7.3 3.53c-.1-.1-.24-.2-.4-.2s-.3.05-.4.15L5.57 4.4c-.2.2-.4.4-.5.6s-.2.4-.1.6c.45 1.3 1.49 2.34 2.37 3.22.88.88 1.92 1.92 3.22 2.37.2.1.4.15.6.05s.4-.2.6-.5l.78-.78c.1-.1.3-.15.4-.15s.3.05.4.15l1.58 1.58c.1.1.2.24.2.4s-.05.3-.15.4z"/></svg></a>
-                    <a href="mailto:contact@agridurable.org" class="text-gray-400 hover:text-white transition-colors" aria-label="Email"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6zm-2 0l-8 5-8-5h16zm0 12H4V8l8 5 8-5v10z"/></svg></a>
+                    <a href="mailto:agenda.settat@gmail.com" class="text-gray-400 hover:text-white transition-colors" aria-label="Email"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6zm-2 0l-8 5-8-5h16zm0 12H4V8l8 5 8-5v10z"/></svg></a>
                 </div>
             </div>
         </div>
