--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@
                 see_more_btn: "Voir Plus",
                 discover_principles_btn: "Découvrir Notre Vision",
                 counter_1_text: "Agriculteurs Formés",
-                counter_2_text: "Projets Lancés",
+                counter_2_text: "Projets exécutés",
                 counter_3_text: "Hectares Cultivés Durablement",
                 gallery_title: "Notre Galerie",
                 gallery_card_1_title: "Irrigation Intelligente",
@@ -1085,7 +1085,7 @@
                 see_more_btn: "See More",
                 discover_principles_btn: "Discover Our Vision",
                 counter_1_text: "Farmers Trained",
-                counter_2_text: "Projects Launched",
+                counter_2_text: "Completed Projects",
                 counter_3_text: "Hectares Sustainably Cultivated",
                 gallery_title: "Our Gallery",
                 gallery_card_1_title: "Smart Irrigation",
@@ -1162,7 +1162,7 @@
                 see_more_btn: "شاهد المزيد",
                 discover_principles_btn: "اكتشف رؤيتنا",
                 counter_1_text: "مزارع تم تدريبهم",
-                counter_2_text: "مشروع تم إطلاقه",
+                counter_2_text: "المشاريع المنجزة",
                 counter_3_text: "هكتار مزروع بشكل مستدام",
                 gallery_title: "معرضنا",
                 gallery_card_1_title: "الري الذكي",
